apps/bluesky/environments/manifest.yaml
---
# Source: homelab/charts/bluesky/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluesky
  labels:
    helm.sh/chart: bluesky-0.1.5
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: pds-port
  selector:
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
---
# Source: homelab/charts/envoy-proxy-bouncer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluesky-envoy-proxy-bouncer
  labels:
    helm.sh/chart: envoy-proxy-bouncer-0.4.1
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "v0.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: bluesky
---
# Source: homelab/charts/bluesky/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluesky
  labels:
    helm.sh/chart: bluesky-0.1.5
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bluesky
      app.kubernetes.io/instance: bluesky
  template:
    metadata:
      labels:
        helm.sh/chart: bluesky-0.1.5
        app.kubernetes.io/name: bluesky
        app.kubernetes.io/instance: bluesky
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: bluesky
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: bluesky
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          image: "ghcr.io/bluesky-social/pds:0.4.188"
          imagePullPolicy: IfNotPresent
          ports:
            - name: pds-port
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /pds
              name: pvc-bluesky-temp
              readOnly: false
      volumes:
        - name: pvc-bluesky-temp
          persistentVolumeClaim:
            claimName: bluesky-temp
---
# Source: homelab/charts/envoy-proxy-bouncer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluesky-envoy-proxy-bouncer
  labels:
    helm.sh/chart: envoy-proxy-bouncer-0.4.1
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "v0.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy-proxy-bouncer
      app.kubernetes.io/instance: bluesky
  template:
    metadata:
      labels:
        helm.sh/chart: envoy-proxy-bouncer-0.4.1
        app.kubernetes.io/name: envoy-proxy-bouncer
        app.kubernetes.io/instance: bluesky
        app.kubernetes.io/version: "v0.4.1"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: bluesky-envoy-proxy-bouncer
      securityContext:
        {}
      containers:
        - name: envoy-proxy-bouncer
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "ghcr.io/kdwils/envoy-proxy-bouncer:v0.4.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
---
# Source: homelab/charts/bluesky/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bluesky
  labels:
    helm.sh/chart: bluesky-0.1.5
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "bluesky.kyledev.co"
    - "bluesky.int.kyledev.co"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: bluesky
        port: 3000
---
# Source: homelab/charts/bluesky/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: bluesky
  labels:
    helm.sh/chart: bluesky-0.1.5
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bluesky
  extAuth:
    grpc:
      backendRefs:
      - group: ""
        kind: Service
        name: homelab-envoy-proxy-bouncer
        namespace: envoy-gateway-system
        port: 8080
